--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "telegram",
+  "name": "telegram-clone",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -36,5 +36,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "eslint": "^8.44.0",
+    "prettier": "^2.8.8"
   }
 }
